--- a/Chalkable.Web/assets/sass/partials/controls/_glance-box.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_glance-box.scss
@@ -102,6 +102,9 @@
 
     >DIV{
       font: normal 11px Arial;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
