--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -21,15 +21,21 @@ statusData = self.getStatusData()
                     if(!user.getCurrentClassName() || user.getCurrentClassName().toLowerCase() != 'no class now')
                         |&nbsp;- #{user.getRoomName()}
                 .glance-container
-                    +GlanceBox(null, null, self.buildGradesGlanceBoxData())
-                    +GlanceBox(null, null, self.buildAttendanceGlanceBoxData(), null, chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
-                    +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null, null)
-                    +GlanceBox(null, null, self.buildRankGlanceBoxData())
-        .today-work-panel
-            h2=Msg.Todays_work
-            .period-toolbar
-                +LeftRightToolbar(user.getPeriodSection(), chlk.templates.announcement.AnnouncementClassPeriod)(hideArrows).centered
-        .today-work-panel
-            h2.stats=Msg.Classes
-            .classes-tb
-                +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class).centered
+                    if self.getUser().getGradesBox()
+                        +GlanceBox(null, null, self.buildGradesGlanceBoxData())
+                    if self.getUser().getAttendanceBox()
+                        +GlanceBox(null, null, self.buildAttendanceGlanceBoxData(), null, chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
+                    if self.getUser().getDisciplineBox()
+                        +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null, null)
+                    if self.getUser().getRankBox()
+                        +GlanceBox(null, null, self.buildRankGlanceBoxData())
+        if user.getPeriodSection()
+            .today-work-panel
+                h2=Msg.Todays_work
+                .period-toolbar
+                    +LeftRightToolbar(user.getPeriodSection(), chlk.templates.announcement.AnnouncementClassPeriod)(hideArrows).centered
+        if user.getClassesSection()
+            .today-work-panel
+                h2.stats=Msg.Classes
+                .classes-tb
+                    +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class).centered
