--- a/Chalkable.Web/assets/jade/controls/checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/checkbox.jade
@@ -1,7 +1,7 @@
 mixin Checkbox(name, val, isReadOnly)
     -attributes.checked = val;
     -attributes.disabled = isReadOnly
-    -attributes = self.prepareData(attributes, val);
+    -attributes = self.prepareData(attributes, val)
     +Hidden(name, false)(data-value=val, class="hidden-checkbox", id=attributes.id + '-hidden')
-    input(name = name, type="checkbox")(attributes)
+    input(name = name, type="checkbox", class="checkbox")(attributes)
 
