--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -20,18 +20,18 @@ statusData = self.getStatusData()
                     if self.getUser().getRankBox()
                         +GlanceBox(null, null, self.buildRankGlanceBoxData())
                     if self.getUser().getAttendanceBox()
-                        +GlanceBox(null, null, self.buildAttendanceGlanceBoxData(), null, chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
+                        +GlanceBox(null, null, self.buildAttendanceGlanceBoxData(), null, null, true, true)
                     if self.getUser().getDisciplineBox()
                         +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null, null)
                     if self.getUser().getGradesBox()
-                        +GlanceBox(null, null, self.buildGradesGlanceBoxData())
+                        +GlanceBox(null, null, self.buildGradesGlanceBoxData(), null, null, true, true)
         if user.getPeriodSection()
             .today-work-panel
                 h2=Msg.Todays_work
                 .period-toolbar
-                    +LeftRightToolbar(user.getPeriodSection(), chlk.templates.announcement.AnnouncementClassPeriod)(hideArrows).centered
+                    +LeftRightToolbar(user.getPeriodSection(), chlk.templates.announcement.AnnouncementClassPeriod)(hideArrows).centered.big-arrows
         if user.getClassesSection()
             .today-work-panel
                 h2.stats=Msg.Classes
                 .classes-tb
-                    +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class)(hideArrows).centered
+                    +LeftRightToolbar(user.getClassesSection(), chlk.templates.classes.Class)(hideArrows).centered.big-arrows
