--- a/Chalkable.Web/assets/sass/partials/controls/_glance-box.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_glance-box.scss
@@ -13,6 +13,17 @@
     @include transition-property("all");
     @include transition-duration("0.2s");
     @include transition-delay("0.3s");
+
+    .details-container{
+      @include transition-property("all");
+      @include transition-duration("0.2s");
+      @include transition-delay("0.3s");
+      height: 80px;
+      overflow-y: auto;
+      opacity: 0;
+      width: 105px;
+      text-align: left;
+    }
   }
   color: #957633;
   display: inline-block;
@@ -26,14 +37,12 @@
   text-align: center;
   overflow: hidden;
 
-  &.hover-action-box{
+  &.hover-action-box:hover{
     >DIV{
-      &:hover{
-        margin-top: -69px;
+      margin-top: -69px;
 
-        .details{
-          opacity: 1;
-        }
+      .details-container{
+        opacity: 1;
       }
     }
   }
@@ -83,25 +92,40 @@
   }
 
   .details{
-    @include transition-property("all");
-    @include transition-duration("0.2s");
-    @include transition-delay("0.3s");
-
-    margin: 0 auto 10px;
+    margin: 0 11px 0;
     display: inline-block;
-    background: url(images/profile/glance-details-bg.png) 0 0 no-repeat;
-    height: 58px;
-    width: 57px;
-    padding: 13px 3px 3px 3px;
+    background: url(images/profile/glance-details-bg.png) center 0 no-repeat, #f0e5c4;
+    width: 55px;
+    min-height: 58px;
+    padding: 7px 3px 3px 3px;
     overflow: hidden;
-    opacity: 0;
     color: #957633;
+    border: 1px solid #6b5841;
+    border-width: 3px 1px 2px 1px;
+    border-radius: 2px;
+    @include box-shadow(inset 1px 1px 0 #bdaf92);
 
     >DIV{
       font: normal 11px Arial;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      >DIV{
+        display: inline-block;
+        vertical-align: top;
+        overflow: hidden;
+
+      }
+
+      .summary{
+        width: 40px;
+        text-overflow: ellipsis;
+      }
+
+      .total{
+        width: 15px;
+      }
     }
   }
 
