--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -254,6 +254,7 @@ overflow-hidden{
     padding: 3px 5px;
     line-height: 15px;
     max-width: 150px;
+    word-break: break-all;
   }
 
   .tooltip-triangle {
