fixed for 437 [54 453]	minor	Messages - While reading a received message, the sender's name is missing a space between first and last

--- a/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
@@ -2,7 +2,7 @@
     .bg-top
     .bg-middle
         .x-window-header
-            span= self.getSender().getFirstName() + self.getSender().getLastName()
+            span= self.getSender().getFirstName() + " " + self.getSender().getLastName()
         .x-window-body
             .general-info
                 .subject
