--- a/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/attachments/_attachment_dialogs.scss
@@ -89,6 +89,11 @@
         width: 100%;
         height: 100%;
         text-align: center;
+        padding-bottom: 20px;
+
+        .picture-container-2{
+          overflow-y: auto;
+        }
       }
 
       iframe{
