--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -3,7 +3,7 @@ gradeLevel = user.getGradeLevelNumber();
 statusData = self.getStatusData()
 .loader-container
     .loader
-    +UserProfileTopBar(self, 'details')
+    +ProfileTopBar(self, 'details')
     .summary-view
         #top-summary-panel
             #avatar-photo-conainer
