--- a/Chalkable.Web/Views/Developer/Info.cshtml
+++ b/Chalkable.Web/Views/Developer/Info.cshtml
@@ -78,7 +78,7 @@
 				<ul>
 					<li>
 						<ul class="links">
-							<li><a href="@Url.Content("~/User/Faq")">FAQ</a></li>
+							<li><a href="@Url.Content("~/Home/Faq")">FAQ</a></li>
 							<li><a target="_blank" href="http://blog.chalkable.com/">Blog</a></li>
 							<li><a target="_blank" href="http://chalkable.uservoice.com/">Feedback</a></li>
 							<li><a href="mailto:info@chalkable.com">Email us</a></li>
