--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -518,6 +518,10 @@ TEXTAREA.animated-textarea{
   @include box-shadow(0 1px 0 0 #9abbcb inset, 0 1px 2px 0px #999);
   border: 1px solid #29596e;
 
+  &.content-box{
+    box-sizing: content-box;
+  }
+
   &:hover, &.pressed{
     @include box-shadow(0 1px 2px 0px #999);
     @include background(linear-gradient(top, #265f75, #3688a4));
