updated second step for first login

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -166,7 +166,8 @@
         }
         <div id = "chlk-overlay" class ="x-hidden"></div>
         <div id = "first-login-overlay"></div>
-        <a id="first-login-video" href="https://www.youtube.com/watch?v=rj4J6i_vw0w&list=PLduQ8VhtxqZBIz85kNxPYS8jQIP451RW7"></a>
+        <a id="first-login-video" href="https://www.youtube.com/watch?v=IsY9NJWf1nY"></a>
+        <input id="first-login-input" />
         <div id="chlk-pop-up-container" class="x-hidden">
             <div id="pop-up-triangle"></div>
         </div>
