fixed for CHLK-2754 Teacher/Student: Setup :: from iNow - Step 2 > splash screen

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -166,7 +166,7 @@
         }
         <div id = "chlk-overlay" class ="x-hidden"></div>
         <div id = "first-login-overlay"></div>
-        <a id="first-login-video" href="https://www.youtube.com/watch?v=IsY9NJWf1nY"></a>
+        <a id="first-login-video" href="https://www.youtube.com/watch?v=sDdfBOYpduU"></a>
         <input id="first-login-input" />
         <div id="chlk-pop-up-container" class="x-hidden">
             <div id="pop-up-triangle"></div>
