--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -12,7 +12,7 @@ $star-size: 18px;
     display: block;
   }
 
-  #sidebar-controls, .classes-bar{
+  #sidebar-controls, .classes-bar, #home-logo-link{
     z-index: 99999;
     position: relative;
   }
@@ -27,6 +27,11 @@ $star-size: 18px;
   .ui-widget-overlay{
     display: none !important;
   }
+}
+
+#home-logo-link{
+  height: 51px;
+  margin: 39px 20px 0 32px;
 }
 
 body:not(.first-login){
