--- a/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
@@ -6,29 +6,49 @@ selectedId = topData.getSelectedItemId()
 ).classes-bar
 .student-grading-summary.student-grading-class-summary
     -clazz=self.getClazz()
-    h1
-        +ActionLink('user', 'infoByRole', clazz.getTeacher().getId(), chlk.models.common.RoleNamesEnum.TEACHER)
-            +PersonImg(clazz.getTeacher(), 47)
-        =clazz.getName()
-        .mp-info
-            -mp=self.getCurrentMarkingPeriod()
-            =Msg.Marking_Period_shortcut.toUpperCase() + ' ' + mp.getName() + mp.getStartDate().format(' M d - ') + mp.getEndDate().format('M d')
-    .chart-top-legend
-        each item,i in self.getAnnTypesGradeStats()
-            div(data-color=self.getColor(i), data-opacity-color=self.getColor(i, 0.2), data-index=i).legend-item
-                div(style="background:" + self.getColor(i) + ";").box
-                .name=item.getTypeName()
-        .legend-item.hovered.avg
-            .box
-            .name
-                |#{Msg.Avg} (#{self.getAvg()})
-    .grading-chart-part.relative
-        .chart-bg2
-        .chart-container-1
-            +Chart()(
-                data-options = self.getChartOptions()
-            ).relative.main-chart
-    +RenderWith(self.getSummaryPart(), chlk.templates.grading.GradingClassSummaryPartTpl)(
-        gradingPeriodId = self.getGradingPeriodId()
-    )
+    if clazz && self.getCurrentMarkingPeriod()
+        h1
+            +ActionLink('user', 'infoByRole', clazz.getTeacher().getId(), chlk.models.common.RoleNamesEnum.TEACHER)
+                +PersonImg(clazz.getTeacher(), 47)
+            =clazz.getName()
+            .mp-info
+                -mp=self.getCurrentMarkingPeriod()
+                =Msg.Marking_Period_shortcut.toUpperCase() + ' ' + mp.getName() + mp.getStartDate().format(' M d - ') + mp.getEndDate().format('M d')
+    if self.getAnnTypesGradeStats()
+        .chart-top-legend
+            each item,i in self.getAnnTypesGradeStats()
+                div(data-color=self.getColor(i), data-opacity-color=self.getColor(i, 0.2), data-index=i).legend-item
+                    div(style="background:" + self.getColor(i) + ";").box
+                    .name=item.getTypeName()
+            .legend-item.hovered.avg
+                .box
+                .name
+                    |#{Msg.Avg} (#{self.getAvg()})
+    if self.getChartOptions()
+        .grading-chart-part.relative
+            .chart-bg2
+            .chart-container-1
+                +Chart()(
+                    data-options = self.getChartOptions()
+                ).relative.main-chart
+    if self.getSummaryPart() && self.getSummaryPart().getItems()
+        +RenderWith(self.getSummaryPart(), chlk.templates.grading.GradingClassSummaryPartTpl)(
+            gradingPeriodId = self.getGradingPeriodId()
+        )
+    if self.announcements
+        h1=Msg.Recently_Graded_Items
+
+        .not-transparent
+            +ListView(self.announcements)(
+            infiniteScroll = true,
+            needGoToButton = true,
+            service = chlk.services.GradingService,
+            method = "getRecentlyGradedItems",
+            tpl = chlk.templates.announcement.FeedItemTpl,
+            pageSize = 10,
+            paramsPrepend = [selectedId]
+            )
+                each announcement in self.announcements
+                    +FeedItem(announcement)
+
 
