fixed student grades fixed go to Inow button

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -76,7 +76,7 @@
         <div id="logout-block">
         @if (!isDemoSchool && !isDeveloperSchool)
         {
-            @Html.ActionLink("Go to INOW", "RedirectToINow", "User", null, new { style = "visibility: hidden;" })
+            @Html.ActionLink("Go to INOW", "RedirectToINow", "User", null)
         }
         </div>
         
