--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -1,4 +1,4 @@
-+ActionLink('feed', 'list')#home-logo
++ActionLink('feed', 'list', false, true)#home-logo
     div#home-logo-link
 #sidebar-controls
     .search-wrapper
