--- a/Chalkable.Web/assets/sass/partials/main/developer/_api.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_api.scss
@@ -7,7 +7,9 @@ BODY {
             #main {
               DIV.api-explorer{
 
-
+                .auto-overflow{
+                  overflow: auto;
+                }
 
                 .lr-toolbar{
                   .arrow{
