fixed for CHLK-2772 Student grades: select a class is broken CHLK-2773 Student Grades: cant open recently graded item

--- a/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingStudentClassSummary.jade
@@ -5,8 +5,8 @@ selectedId = topData.getSelectedItemId()
     selectedItemId=selectedId
 ).classes-bar
 .student-grading-summary.student-grading-class-summary
-    -clazz=self.getClazz()
-    if clazz && self.getCurrentMarkingPeriod()
+    clazz = self.getClazz()
+    if clazz && self.getCurrentMarkingPeriod() && clazz.getTeacher()
         h1
             +ActionLink('user', 'infoByRole', clazz.getTeacher().getId(), chlk.models.common.RoleNamesEnum.TEACHER)
                 +PersonImg(clazz.getTeacher(), 47)
@@ -70,6 +70,6 @@ selectedId = topData.getSelectedItemId()
             paramsPrepend = [selectedId]
             )
                 each announcement in self.announcements
-                    +FeedItem(announcement)
+                    +FeedItem(announcement, true)
 
 
